unpackaged/main/default/objects/Brand_Form_Help_Topics__mdt/Brand_Form_Help_Topics__mdt.object-meta.xml
<CustomObject>
    <label>Brand Form - Help Topics</label>
    <pluralLabel>Brand Form - Help Topics</pluralLabel>
</CustomObject>