unpackaged/main/default/objects/Brand_Form_Help_Topics__mdt/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Associated brand</description>
    <inlineHelpText>Choose a related &quot;Brand&quot; here. When the chosen &quot;Brand&quot; is chosen from the Brand Form, this Help Topic entry will display.</inlineHelpText>
    <label>Brand</label>
    <referenceTo>Webform_Brands__mdt</referenceTo>
    <relationshipLabel>Brand Form - Help Topics</relationshipLabel>
    <relationshipName>Brand_Form_Help_Topics1</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>