unpackaged/main/default/objects/Brand_Form_Help_Topics__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Picklist label</description>
    <label>Label</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>