unpackaged/main/default/objects/Brand_Form_Help_Topics__mdt/listViews/Details.listView-meta.xml
<ListView>
    <fullName>Details</fullName>
    <columns>Label__c</columns>
    <columns>Value__c</columns>
    <columns>Brand__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>Details</label>
</ListView>