unpackaged/main/default/objects/Brand_Form_Help_Topics__mdt/listViews/TH.listView-meta.xml
<ListView>
    <fullName>TH</fullName>
    <columns>MasterLabel</columns>
    <columns>Value__c</columns>
    <columns>Label__c</columns>
    <columns>DeveloperName</columns>
    <columns>Order__c</columns>
    <columns>Brand__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>contains</operation>
        <value>Tommy</value>
    </filters>
    <label>TH</label>
</ListView>