unpackaged/main/default/objects/Brand_Form_Help_Topics__mdt/listViews/Warner_s.listView-meta.xml
<ListView>
    <fullName>Warner_s</fullName>
    <columns>MasterLabel</columns>
    <columns>Value__c</columns>
    <columns>Label__c</columns>
    <columns>DeveloperName</columns>
    <columns>Order__c</columns>
    <columns>Brand__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>contains</operation>
        <value>Warner</value>
    </filters>
    <label>Warner&#39;s</label>
</ListView>